--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,13 +5,11 @@
     display: flex;
     align-items: center;
     width: 100%;
-    z-index: 10;
-    /* height: 15vh; */
-    margin: 0;
-    padding: 0;
+     margin: 0;
+    padding: 10px;
     background-color:  #011C2C !important;
     box-shadow: 0 10px 30px -10px;
-    z-index: 1;
+    z-index: 10;
 
 }
 
@@ -48,3 +46,8 @@
 
 }
 
+.resume a{
+    text-decoration: none;
+    border:1px solid gray;
+    padding: 5px;
+}
