modify the projectgallery and project file and add style.css to the files

--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -8,8 +8,7 @@ body{
     /* margin:   auto; */
     padding-top: 60px;
     justify-content: center;
-    border: none
-    ;
+    border: none;
   }
   
   #message{
