--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    height: 64px;
      margin: 0;
     padding: 10px;
     background-color:  #011C2C !important;
@@ -13,12 +14,20 @@
 
 }
 
-#logo {
+.navHead #logo {
     float: left;
-    width: 43px;
-    height: 43px;
-    padding-left: 20px;
+    width: 180px;
+    height: 155px;
+    object-fit: contain;
     margin: 0;
+    mix-blend-mode:lighten;
+}
+.navHead{
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+
 }
 
 
