--- a/src/components/pages/Project/style.css
+++ b/src/components/pages/Project/style.css
@@ -1,7 +1,7 @@
  h5{
     color: #16D2A7;
     font-size: 2.5rem;
-    /* padding-top: 60px; */
+     padding-top: 20px; 
 }
 p{
     color: #16D2A7;
